Fix dark mode version selector

--- a/styles/singleApp.module.scss
+++ b/styles/singleApp.module.scss
@@ -165,7 +165,8 @@
             position: absolute;
             top: -15px;
             height: 50px;
-            transition: 0.3s all ease-in-out;            
+            transition: 0.3s all ease-in-out;      
+            
         }
     }
     
@@ -375,5 +376,11 @@
                 }
             }
         }
+    }
+}
+
+.dark .versionSelector{
+    option{
+        color: var(--altTextColor);
     }
 }
